<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macbookair.demo.contacts_information">

    <ImageView
        android:id="@+id/contact_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/contact_img"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_img"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/txt"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txt"
        android:layout_marginTop="10dp"
        android:text="@string/phone_number"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/contactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/txt1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txt1"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/contactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/txt2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactEmail"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@color/buttonColor"
        android:onClick="makeCall"
        android:text="@string/call"
        android:textSize="20sp" />


</RelativeLayout>
