<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macbookair.demo.MainActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contacts"
        android:textAlignment="center"
        android:textColor="@color/txtColor"
        android:textSize="40sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txt"
        android:layout_marginTop="130dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addedContactName"
        android:layout_below="@id/txt"
        android:layout_centerInParent="true"
        android:textSize="15sp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/addedContactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_centerInParent="true"
        android:layout_below="@id/addedContactName"
        android:textSize="15sp"
        android:hint="@string/phone_number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:layout_below="@id/addedContactPhone"
        android:layout_centerInParent="true"
        android:text="@string/save"
        android:textSize="20sp"
        android:onClick="save"/>


</RelativeLayout>
